--- a/Feel/Feel.csproj
+++ b/Feel/Feel.csproj
@@ -22,6 +22,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.5" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="9.0.5" />
+	  <PackageReference Include="TG.Blazor.IndexedDB" Version="1.5.0-preview" />
+
+
   </ItemGroup>
 
   <ItemGroup>
